Remove obsolete Adaptive Prefix Partitioning (APP) documentation and test files.